# Distilllab

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
apps/desktop-react/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
apps/desktop-react/src/: App.tsx  app.css  main.tsx
apps/desktop-react/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-react/src-tauri/capabilities/: default.json
apps/desktop-react/src-tauri/icons/: icon.icns
apps/desktop-react/src-tauri/src/: lib.rs  main.rs
apps/desktop-react/src/app-state/: screen-state.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/ui/: desktop-shell.css  desktop-shell.js  desktop-shell.test.js  index-old.html  index.html  theme-preference.js  theme-preference.test.js
crates/agent/: Cargo.toml
crates/agent/src/: asset_extraction_agent.rs  chunk_extraction_agent.rs  definition.rs  error.rs  lib.rs  llm.rs  project_resolution_agent.rs  run_completion_summarizer.rs  session_agent.rs  skills.rs  tools.rs  work_item_extraction_agent.rs
crates/memory/: Cargo.toml
crates/memory/src/: asset_store.rs  chunk_store.rs  db.rs  lib.rs  migrations.rs  project_store.rs  run_store.rs  session_message_store.rs  session_store.rs  source_store.rs  work_item_store.rs
crates/observe/: Cargo.toml
crates/provider/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: app.rs  asset_service.rs  chunk_service.rs  config.rs  lib.rs  project_service.rs  run_service.rs  session_service.rs  source_service.rs  work_item_service.rs
crates/runtime/src/agents/: asset_extractor.rs  chunk_agent.rs  mod.rs  work_item_extractor.rs
crates/runtime/src/contracts/: chat_stream.rs  mod.rs  run_output.rs  session.rs  session_intake.rs  source_materialization.rs
crates/runtime/src/flows/: attachment_storage.rs  distill_run.rs  mod.rs  source_materialization.rs
crates/runtime/src/runs/: definitions.rs  mod.rs
crates/runtime/src/services/: asset_service.rs  canvas_projection_service.rs  chunk_service.rs  distill_run_executor.rs  mod.rs  project_service.rs  session_intake_coordinator.rs  session_service.rs  source_service.rs  tool_executor.rs  work_item_service.rs
crates/schema/: Cargo.toml
crates/schema/src/: asset.rs  chunk.rs  lib.rs  project.rs  run.rs  session.rs  session_intake.rs  session_message.rs  source.rs  work_item.rs
(+61 files in other folders)
