[package]
name = "distilllab-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
schema = { package = "distilllab-schema", path = "../schema" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
