[package]
name = "distilllab-desktop-react"
version = "0.1.0"
description = "Distilllab desktop React Tauri app"
authors = ["Chiicake"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "distilllab_desktop_react_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
runtime = { package = "distilllab-runtime", path = "../../../crates/runtime" }
schema = { package = "distilllab-schema", path = "../../../crates/schema" }
agent = { package = "distilllab-agent", path = "../../../crates/agent" }
